--- a/views/user/coupon.ejs
+++ b/views/user/coupon.ejs
@@ -40,6 +40,7 @@
               <li><a href="/changepassword" class="list-group-item list-group-item-action">Change Password</a></li>
               <li><a href="/wallet" class="list-group-item list-group-item-action">Wallet</a></li>
               <li><a href="/coupon" class="list-group-item list-group-item-action">Coupons</a></li>
+              <li><a href="/failedpayments" class="list-group-item list-group-item-action" style="list-style: none;">Failed Payment</a></li>
             </ul>
             <a href="/orders" class="list-group-item list-group-item-action"><b>Orders</b></a><br>
             <ul class="pl-4">
@@ -76,10 +77,10 @@
             </div>
         </div>
         <% }); %>
-        <% } else { %>
+       <% } else { %>
             <div class="col-12">
-              <p>No coupons available</p>
-            </div>
+              <p><strong>No coupons available</strong></p>
+            </div> 
           <% } %>
     </div>
 </div>
