--- a/views/user/productdetails.ejs
+++ b/views/user/productdetails.ejs
@@ -149,6 +149,7 @@
                   aria-label="Example text with button addon"
                   aria-describedby="button-addon1"
                   value="1"
+                  disabled
                 />
                 <button
                   class="btn btn-white border border-secondary px-3"
