--- a/views/user/searchresults.ejs
+++ b/views/user/searchresults.ejs
@@ -62,7 +62,7 @@
         <% }); %>
       <% } else { %>
         <div class="col-12">
-          <p>No products available in this category.</p>
+          <p>No products available </p>
         </div>
       <% } %>
     </section>
