--- a/views/admin/order.ejs
+++ b/views/admin/order.ejs
@@ -23,7 +23,7 @@
                     
                     <a href="/admin/sales"><i class="fa fa-line-chart" style="margin-right: 10px;"
                             aria-hidden="true"></i>Sales</a>
-                    <a href="admin/logout"><i class="fa fa-sign-out" style="margin-right: 10px;"
+                    <a href="/admin/logout"><i class="fa fa-sign-out" style="margin-right: 10px;"
                             aria-hidden="true"></i>Logout</a>
                 </div>
             </div>
