razorpay key changed

--- a/views/user/placeorder.ejs
+++ b/views/user/placeorder.ejs
@@ -171,7 +171,7 @@
             const id = order.id;
             const total = order.amount;
             var options = {
-              key: "rzp_test_0pK78JvD45gsXV",
+              key: "rzp_test_yOdXB6QYxSIZDa",
               amount: total,
               currency: "INR",
               name: "bagsvio",
