wallet top up error fixed

--- a/views/user/failedpayments.ejs
+++ b/views/user/failedpayments.ejs
@@ -193,7 +193,7 @@
       const res = await data.json()
       console.log(res,"dataaa");
           var options = {
-            key: "rzp_test_0pK78JvD45gsXV",
+            key: "rzp_test_yOdXB6QYxSIZDa",
             amount: res.totalPrice*100,
             currency: "INR",
             name: "bagsvio",
