--- a/views/user/wallet.ejs
+++ b/views/user/wallet.ejs
@@ -189,7 +189,7 @@
       .then(response => response.json())
       .then(order => {
         var options = {
-          "key": "rzp_test_5R2m8IF7tYZkkO", 
+          "key": "rzp_test_yOdXB6QYxSIZDa", 
           "amount": order.amount, 
           "currency": "INR",
           "name": "bagsvio",
