--- a/views/user/profile.ejs
+++ b/views/user/profile.ejs
@@ -104,7 +104,7 @@
         </div>
           <div>
           <h6>Your referral link : </h6>
-          <h6 class="text-primary" id="referral-link">bagsvio.shop/signup/<%=user._id%> </h6>
+          <h6 class="text-primary" id="referral-link">localhost:3000/signup/<%=user._id%> </h6>
           </div>
           <div class="p-4">
           <button id="copyButton" class=" border-0">copy</button>
